<?xml version="1.0" encoding="utf-8"?>




<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="275dp"
        android:layout_height="94dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <TextView
            android:id="@+id/textView"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/course"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Course" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Grade" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/credits"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="g" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/cousrse1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:gravity="center"
            android:hint="Course Name" />

        <Spinner
            android:id="@+id/grade1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="#E6AF2E"
            android:gravity="center"
           />

        <EditText
            android:id="@+id/credit1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="#ffff"
            android:gravity="center"
            android:text="0"
            android:hint="Credits"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1">

        <EditText
            android:id="@+id/cousrse2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:gravity="center"
            android:hint="Course Name" />

        <Spinner
            android:id="@+id/grade2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="#E6AF2E"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/credit2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="#ffff"
            android:gravity="center"
            android:hint="Credits"
            android:text="0"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear2">

        <EditText
            android:id="@+id/cousrse3"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:gravity="center"
            android:hint="Course Name" />

        <Spinner
            android:id="@+id/grade3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="#E6AF2E"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/credit3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="#ffff"
            android:gravity="center"
            android:hint="Credits"
            android:text="0"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear3">

        <EditText
            android:id="@+id/cousrse4"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:gravity="center"
            android:hint="Course Name" />

        <Spinner
            android:id="@+id/grade4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="#E6AF2E"
            android:gravity="center"
           />

        <EditText
            android:id="@+id/credit4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="#ffff"
            android:gravity="center"
            android:hint="Credits"
            android:text="0"
            android:inputType="number" />
    </LinearLayout>


    <Button
        android:id="@+id/angry_btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/calculate"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear4" />


        <Button
            android:id="@+id/angry_btn2"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/buttonshape"
            android:text="@string/refresh"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear4" />

        <TextView
        android:id="@+id/output_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angry_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
